fix Bug-20230612-2 - Text_Block - UI/UX check #486 (#502)
* fix Bug-20230612-2 - Text_Block - UI/UX check #486

* lint

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -259,6 +259,10 @@
     "defaultMessage": "What best describe you?",
     "description": "NewProfileType User Type Screen - Title"
   },
+  "6AiFWY": {
+    "defaultMessage": "Configuration",
+    "description": "Configuration tab label in BlockText edition"
+  },
   "6EPGoU": {
     "defaultMessage": "Off",
     "description": "flash off accessibility value"
@@ -370,10 +374,6 @@
   "8oWzcI": {
     "defaultMessage": "Vertical Spacing",
     "description": "Label of the verticalSpacing slider in BlockText edition"
-  },
-  "9+XQvm": {
-    "defaultMessage": "Settings color",
-    "description": "Settings color tab label in BlockText edition"
   },
   "9/DfwF": {
     "defaultMessage": "Forgot your password?",
@@ -2070,10 +2070,6 @@
   "noNWRA": {
     "defaultMessage": "Cut Video",
     "description": "Accessibility label of the Cut Video tab in image picking wizzard"
-  },
-  "nwwOkD": {
-    "defaultMessage": "Settings Shape",
-    "description": "Settings Shape tab label in BlockText edition"
   },
   "nybB30": {
     "defaultMessage": "Text left/right margin",
