fix drizzle and migrate mediacover to cloudinaryHelper (#506)
* feat: fix drizzle request && migrate saving cover to cloudinaryHelper

* fix linter

* fix some drizzle error

* last drizzle fix

* fix from review

* Attach PS environment to branch cover-update

---------

Co-authored-by: batical <batical@users.noreply.github.com>

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -999,6 +999,10 @@
     "defaultMessage": "Show password",
     "description": "Password text input - show password button accessibility label"
   },
+  "OHFGCg": {
+    "defaultMessage": "Unknown error while uploading the cover. Please retry",
+    "description": "CoverEditionScreen Alert message unknown error"
+  },
   "OKOTHE": {
     "defaultMessage": "Anyone can download your contact card from your profile.",
     "description": "Description of the display on my webcard toggle."
