feat(contactCard): #265 serialize data of contact card (#581)
* feat(contactCard): #265 serialize data of contact card

* feat(contactCard): #265 sign serialized contact card in url

* fix: move crypto to shared component + use iron-webcrypto

* fix: update import

* feat(contactCard): migrate to `expo-contacts`

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -47,6 +47,10 @@
     "defaultMessage": "Please enter a valid phone number",
     "description": "Signup Screen - Error message for invalid phone number"
   },
+  "/kY/V9": {
+    "defaultMessage": "Add {name} to contacts?",
+    "description": "Alert title when adding a profile to contacts"
+  },
   "/lVuhj": {
     "defaultMessage": "Font Size : {size}",
     "description": "fontSize message in BlockText edition"
@@ -2458,6 +2462,10 @@
   "ufbGn8": {
     "defaultMessage": "Top margin : {size}",
     "description": "Top margin message in SocialLinks edition"
+  },
+  "ugQFge": {
+    "defaultMessage": "Add {name} to the contacts list of your phone",
+    "description": "Alert message when adding a profile to contacts"
   },
   "uisFlX": {
     "defaultMessage": "Slide to change the Bottom margin",
